# PhiX

./: .gitignore  CMakeLists.txt
applications/solvers/Cahn-Hillard+Allen-Cahn_double-well/2D/: CH+AC_double-well.cu  CMakeLists.txt
applications/solvers/Cahn-Hillard_double-well/2D/: CH_2D  CMakeLists.txt  Cahn-Hillard_double-well.cu  README.md
applications/solvers/glass_formation/2D/: CMakeLists.txt  GFA.cu
applications/solvers/glass_formation/2D/doc/: equations.md  modelling.md
changelog/v1.0.0/: RELEASE.md
changelog/v1.1.0/: RELEASE.md
changelog/v1.1.1/: RELEASE.md
changelog/v1.2.0/: RELEASE.md
changelog/v1.3.0/: RELEASE.md
changelog/v2.0.0/: RELEASE.md
changelog/v2.0.1/: RELEASE.md
changelog/v2.0.2/: RELEASE.md
develop/CH+AC/settings/: settings.jsonc
develop/CH_by_solvers/settings/: settings.jsonc
develop/FeB_ex1/: FeB_ex1.cu  gen_initial_field.py
develop/FeB_ex1/postProcess/: linePlot.ipynb
develop/FeB_ex1/settings/: settings.jsonc
develop/Ostwald_Ripening/: AC-CH.cu  CMakeLists.txt  FreeEnergy.ipynb  computeFreeEnergy.py  debug.ipynb  postProcess.py
develop/Ostwald_Ripening/doc/: freeEnergy.md  modeling.md
develop/Ostwald_Ripening/reference/: MOOSE_FH_2a.csv  MOOSE_IA_2a.csv  MOOSE_IA_2a.csv:Zone.Identifier
develop/Spinodal Decomposition/: Cahn-Hillard.cu  FreeEnergy.ipynb  postProcess.py
develop/Spinodal Decomposition 2/: CMakeLists.txt  Cahn-Hillard.cu  computeFreeEnergy.py
develop/Spinodal Decomposition 2/doc/: freeEnergy.md
develop/Spinodal Decomposition/reference/: MOOSE_IA_1a.csv  MOOSE_IA_1a.csv:Zone.Identifier  moose_fh_1a.csv  moose_fh_1a.csv:Zone.Identifier  pfhub_benchmark1a_digitized_points.csv:Zone.Identifier
develop/fieldOperation/: CMakeLists.txt  test_fieldops.cu
doc/: boundary.md  boundary_en.md  equation.md  equation_en.md  field.md  field_en.md  mesh.md  mesh_en.md  quickstart.md  quickstart_en.md  solver.md  solver_en.md  spinodal_decomposition.md  spinodal_decomposition_en.md
etc/: bashrc
etc/draft/: debug.ipynb  draft.ipynb
etc/temp/: README.md  plot.py  simulate.cpp
include/IO/: ConfigFile.h  FieldFormat.h  FieldIO.h  OutputWriter.h
include/boundary/: BCFactory.h  BoundaryCondition.h  FixedBC.h  NoFluxBC.h  PeriodicBC.h
include/equation/: Equation.h  FieldOps.inl  Term.h  TermPW.inl  VectorEquation.h
include/field/: Field.h  ScalarField.h  VectorField.h
include/mesh/: Mesh.h
include/solver/: Solver.h  VectorSolver.h
src/IO/: ConfigFile.cpp  FieldIO.cpp  OutputWriter.cpp
src/boundary/: BCFactory.cpp  Boundary.cu
src/equation/: Equation.cu  VectorEquation.cu
src/field/: Field.cu  ScalarField.cu  VectorField.cu
src/mesh/: Mesh.cpp
src/solver/: Solver.cu  VectorSolver.cu
tutorials/quickstart/: CMakeLists.txt  main.cu  postProcess.py
